--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,14 +3,14 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches: [main]
-    paths: [./**]
-
+    paths-ignore:
+      - '.github/**'
 jobs:
   deploy:
     name: Deploy to GitHub Pages
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: actions/setup-node@v2
         with:
           node-version: 16.x
