ci: upgrade set-node to v3 (#15)

--- a/.github/workflows/test-deploy.yaml
+++ b/.github/workflows/test-deploy.yaml
@@ -2,8 +2,9 @@ name: Test deployment
 
 on:
   pull_request:
-    branches: [develop]
-    paths: [./**]
+    branches: [main]
+    paths-ignore:
+      - '.github/**'
 
 jobs:
   test-deploy:
